almost done(implement alert and add unit test)

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
     "grafana_api_key": "YOUR_API_KEY",
     "influxdb_api_key": "YOUR_API_KEY",
-    "influxdb_org": "YOUR_ORG"
+    "influxdb_org": "YOUR_ORG",
+    "cpu_threshold": 50,
+    "memory_threshold": 50 
 }
